--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -31,7 +31,19 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".views.activity.RegisterActivity"
+            android:name=".views.activity.RegisterUserNameActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.RegisterMobileActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.BindEmailActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.EmailValidationActivity"
             android:screenOrientation="portrait" />
 
         <activity
