--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -49,6 +49,14 @@
         <activity
             android:name=".views.activity.MainActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.UserDetailActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.AddOrderActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
