添加“我的订单”界面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -57,6 +57,16 @@
         <activity
             android:name=".views.activity.AddOrderActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.AddOrderLocationActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.MyOrderActivity"
+            android:screenOrientation="portrait" />
+
+
     </application>
 
 </manifest>
