添加“服务者”界面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -66,6 +66,9 @@
             android:name=".views.activity.MyOrderActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".views.activity.ServerActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
