--- a/iCare/app/build.gradle
+++ b/iCare/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.facebook.fresco:drawee-volley:0.8.1'
     compile 'com.googlecode.android-query:android-query:0.25.9'
     compile project(':libraries:MyQrcode')
+    compile 'com.bugtags.library:bugtags-lib:1.0.9'
 }
