--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name_icare"
+        android:label="@string/app_name_pro"
         android:theme="@style/AppTheme">
         <activity
             android:name=".views.activity.LoadingActivity"
@@ -36,6 +36,10 @@
 
         <activity
             android:name=".views.activity.RegisterMobileActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.RegisterPasswordActivity"
             android:screenOrientation="portrait" />
 
         <activity
