增加“忘记密码”页面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -43,6 +43,14 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".views.activity.ForgetPwd_MobileActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".views.activity.ForgetPwd_PasswordActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".views.activity.BindEmailActivity"
             android:screenOrientation="portrait" />
 
