添加“联系人”页面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -86,6 +86,10 @@
             android:name=".views.activity.SettingActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".views.activity.ContactsActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
