添加及修改“绑定家人”页面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
             android:name=".views.activity.ContactsActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".views.activity.BindFamilyActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
