修改“我的家人”页面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -112,6 +112,10 @@
             android:name=".views.activity.BindFamilyActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".views.activity.MyFamilyActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
     <supports-screens
