添加“我的家人”详细资料页面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -116,6 +116,10 @@
             android:name=".views.activity.MyFamilyActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".views.activity.MyFamilyDetailActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
     <supports-screens
