添加“我的订单”详情页面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -93,6 +93,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".views.activity.MyOrderDetailActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".views.activity.ServerActivity"
             android:screenOrientation="portrait" />
 
