--- a/iCare/app/build.gradle
+++ b/iCare/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
 
+    sourceSets {
+        main {
+            jniLibs.srcDir 'libs'
+        }
+    }
+
     defaultConfig {
         applicationId "com.sundy.icare"
         minSdkVersion 15
