--- a/iCare/app/build.gradle
+++ b/iCare/app/build.gradle
@@ -25,6 +25,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs' //就是你放aar的目录地址
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -40,4 +46,5 @@ dependencies {
     compile 'com.googlecode.android-query:android-query:0.25.9'
     compile project(':libraries:MyQrcode')
     compile 'com.bugtags.library:bugtags-lib:1.0.9'
+    compile name: 'SMSSDK-2.0.1', ext: 'aar'
 }
