--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
     <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -206,6 +209,7 @@
             </intent-filter>
         </receiver>
         <!-- 百度push结束 -->
+
 
 
     </application>
