修改“选择服务者”列表界面

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -153,6 +153,9 @@
             android:name=".views.activity.ServantDetailActivity"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".views.activity.ChooseServantActivity"
+            android:screenOrientation="portrait"/>
+
 
         <!--   ///////////////////////////////    百度地图    //////////////////////////      -->
         <meta-data
