修改注册流程

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -72,20 +72,12 @@
 
         <activity
             android:name=".activity.LoginActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
 
         <activity
-            android:name=".activity.RegisterUserInfoActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".activity.RegisterMobileActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".activity.RegisterPasswordActivity"
+            android:name=".activity.RegisterActivity"
             android:screenOrientation="portrait" />
 
         <activity
