修改忘记密码流程

--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -81,11 +81,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.ForgetPwd_MobileActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".activity.ForgetPwd_PasswordActivity"
+            android:name=".activity.ForgetPasswordActivity"
             android:screenOrientation="portrait" />
 
         <activity
