--- a/iCare/app/src/main/AndroidManifest.xml
+++ b/iCare/app/src/main/AndroidManifest.xml
@@ -270,7 +270,7 @@
         <!-- 设置环信应用的appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="luda-sky#ludasky" />
+            android:value="luda-sky#icare" />
         <!-- 声明sdk所需的service SDK核心功能-->
         <service
             android:name="com.hyphenate.chat.EMChatService"
