--- a/iCare/app/build.gradle
+++ b/iCare/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile project(':libraries:MyQrcode')
     compile files('libs/hyphenatechat_3.1.1.jar')
     compile files('libs/jpush-android-2.1.0.jar')
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
