--- a/iCare/app/build.gradle
+++ b/iCare/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile files('libs/hyphenatechat_3.1.1.jar')
     compile files('libs/jpush-android-2.1.0.jar')
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
 }
